--- a/roles/git/templates/gitconfig.j2
+++ b/roles/git/templates/gitconfig.j2
@@ -58,9 +58,8 @@
 
 
         # diff-so-fancy
-        # https://github.com/so-fancy/diff-so-fancy/#usage
         df = "!f() { [ -z \"$GIT_PREFIX\" ] || cd \"$GIT_PREFIX\" && git diff --color \"$@\" | diff-so-fancy  | less --tabs=4 -RFX; }; f"
-        dfs = df --staged
+        dfs = git df --staged
         # Get changes for a single commit
         dfc = "!dfc() { git df $1^ $1; }; dfc"
 
